[Check] Homework 32